Update AsyncController.java